Tilin.java
/* Tilin.java */
/* Generated By:JavaCC: Do not edit this line. Tilin.java */
import java.util.ArrayList;

class Tilin implements TilinConstants {
    static ArrayList<String> tabla = TilinTokenManager.tablaErrores;

    public static void main(String[] args) {
        try {
            Tilin parser = new Tilin(System.in);
            parser.ProgramaLS();

            if (tabla.size() != 0) {
                System.out.println("\nAn\u00e1lisis completado con errores\n");
                for (String error : tabla) {
                    System.out.println(error);
                }
            } else {
                System.out.println("An\u00e1lisis exitoso");
            }
        } catch (ParseException e) {
            System.out.println("Error de An\u00e1lisis -> " + Tilin.traducirMensaje(e.getMessage()));
        }
    }

    // Función para traducir mensajes de error
    public static String traducirMensaje(String mensaje) {
        if (mensaje.contains("Encountered")) {
            mensaje = mensaje.replace("Encountered", "Encontrado");
        }
        if (mensaje.contains("at line")) {
            mensaje = mensaje.replace("at line", "en la l\u00ednea");
        }
        if (mensaje.contains("column")) {
            mensaje = mensaje.replace("column", "columna");
        }
        if (mensaje.contains("Was expecting:")) {
            mensaje = mensaje.replace("Was expecting:", "Se esperaba:");
        }
        if (mensaje.contains("Was expecting one of:")) {
            mensaje = mensaje.replace("Was expecting one of:", "Se espera una de estas opciones:");
        }
        return mensaje;
    }

  static final public void ProgramaLS() throws ParseException {
    try {
      jj_consume_token(IdPrograma);
      jj_consume_token(ReservadaInicio);
      label_1:
      while (true) {
        Sentencias();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Lectura:
        case Escritura:
        case TipoDatoEntero:
        case TipoDatoDecimal:
        case TipoDatoCadena:
        case TipoDatoCaracter:
        case TipoDatoNoRetorno:
        case TipoAmbitoPrivado:
        case TipoAmbitoPublico:
        case OperacionResta:
        case OperacionMultiplicacion:
        case OperacionDivision:
        case CondicionalIf:
        case CondicionalSwitch:
        case CicloFor:
        case CicloWhile:
        case Vector:
        case Matriz:
        case Constante:
        case Variable:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      jj_consume_token(Fin);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void Sentencias() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TipoDatoEntero:
    case TipoDatoDecimal:
    case TipoDatoCadena:
    case TipoDatoCaracter:{
      SentenciasFP();
      break;
      }
    case Lectura:{
      gramaticaLectura();
      break;
      }
    case Escritura:{
      gramaticaEscrita();
      break;
      }
    case Constante:{
      gramaticaAsignarConstantes();
      break;
      }
    case Vector:{
      gramaticaVectores();
      break;
      }
    case Matriz:{
      gramaticaMatrices();
      break;
      }
    case TipoAmbitoPrivado:
    case TipoAmbitoPublico:{
      gramaticaFunciones();
      break;
      }
    case TipoDatoNoRetorno:{
      gramaticaProcedimientos();
      break;
      }
    case CondicionalIf:{
      gramaticaIf();
      break;
      }
    case CondicionalSwitch:{
      gramaticaSwitch();
      break;
      }
    case CicloWhile:{
      gramaticaWhile();
      break;
      }
    case CicloFor:{
      gramaticaFor();
      break;
      }
    case OperacionResta:
    case OperacionMultiplicacion:
    case OperacionDivision:
    case Variable:{
      gramaticaAritmeticas();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void SentenciasLC() throws ParseException {
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OperacionDesigualdad:
      case OperacionMayorQue:
      case OperacionMenorQue:
      case OperacionMayorOIgualQue:
      case OperacionMenorOIgualQue:
      case Numero:
      case Variable:{
        gramaticaLogicas();
        break;
        }{
        gramaticaComparativas();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OperacionDesigualdad:
      case OperacionMayorQue:
      case OperacionMenorQue:
      case OperacionMayorOIgualQue:
      case OperacionMenorOIgualQue:
      case Numero:
      case Variable:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
    }
}

  static final public void gramaticaLogicas() throws ParseException {
    gramaticaComparativas();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OperacionAnd:{
      jj_consume_token(OperacionAnd);
      break;
      }
    case OperacionOr:{
      jj_consume_token(OperacionOr);
      break;
      }
    case OperacionNot:{
      jj_consume_token(OperacionNot);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    gramaticaComparativas();
}

  static final public void gramaticaComparativas() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Variable:{
      jj_consume_token(Variable);
      break;
      }
    case Numero:{
      jj_consume_token(Numero);
      jj_consume_token(OperacionIgualdad);
      break;
      }
    case OperacionDesigualdad:{
      jj_consume_token(OperacionDesigualdad);
      break;
      }
    case OperacionMayorQue:{
      jj_consume_token(OperacionMayorQue);
      break;
      }
    case OperacionMenorQue:{
      jj_consume_token(OperacionMenorQue);
      break;
      }
    case OperacionMayorOIgualQue:{
      jj_consume_token(OperacionMayorOIgualQue);
      break;
      }
    case OperacionMenorOIgualQue:{
      jj_consume_token(OperacionMenorOIgualQue);
      jj_consume_token(Variable);
      break;
      }{
      jj_consume_token(Numero);
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void SentenciasFP() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TipoDatoEntero:{
      gramaticaVariableEntero();
      break;
      }
    case TipoDatoDecimal:{
      gramaticaVariableDecimal();
      break;
      }
    case TipoDatoCadena:{
      gramaticaDatoCadena();
      break;
      }
    case TipoDatoCaracter:{
      gramaticaDatoCaracter();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  static final public void gramaticaVariableEntero() throws ParseException {
    try {
      jj_consume_token(TipoDatoEntero);
      jj_consume_token(Variable);
      jj_consume_token(Asignacion);
      jj_consume_token(Numero);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaVariableDecimal() throws ParseException {
    try {
      jj_consume_token(TipoDatoDecimal);
      jj_consume_token(Variable);
      jj_consume_token(Asignacion);
      jj_consume_token(NumeroDecimal);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaDatoCadena() throws ParseException {
    try {
      jj_consume_token(TipoDatoCadena);
      jj_consume_token(Variable);
      jj_consume_token(Asignacion);
      jj_consume_token(Cadenas_Palabras);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaDatoCaracter() throws ParseException {
    try {
      jj_consume_token(TipoDatoCaracter);
      jj_consume_token(Variable);
      jj_consume_token(Asignacion);
      jj_consume_token(Cadenas_Palabras);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaLectura() throws ParseException {
    try {
      jj_consume_token(Lectura);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Variable:{
        jj_consume_token(Variable);
        break;
        }
      case Constante:{
        jj_consume_token(Constante);
        break;
        }
      case Numero:{
        jj_consume_token(Numero);
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaEscrita() throws ParseException {
    try {
      jj_consume_token(Escritura);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Variable:{
        jj_consume_token(Variable);
        break;
        }
      case Constante:{
        jj_consume_token(Constante);
        break;
        }
      case Numero:{
        jj_consume_token(Numero);
        break;
        }
      case Cadenas_Palabras:{
        jj_consume_token(Cadenas_Palabras);
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Concatenacion:{
          ;
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        jj_consume_token(Concatenacion);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Variable:{
          jj_consume_token(Variable);
          break;
          }
        case Constante:{
          jj_consume_token(Constante);
          break;
          }
        case Numero:{
          jj_consume_token(Numero);
          break;
          }
        case Cadenas_Palabras:{
          jj_consume_token(Cadenas_Palabras);
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaAsignarVariables() throws ParseException {
    try {
      jj_consume_token(Variable);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TipoDatoEntero:{
        jj_consume_token(TipoDatoEntero);
        break;
        }
      case TipoDatoDecimal:{
        jj_consume_token(TipoDatoDecimal);
        break;
        }
      case TipoDatoCadena:{
        jj_consume_token(TipoDatoCadena);
        break;
        }
      case TipoDatoCaracter:{
        jj_consume_token(TipoDatoCaracter);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(Asignacion);
      jj_consume_token(Numero);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaAsignarConstantes() throws ParseException {
    try {
      jj_consume_token(Constante);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TipoDatoEntero:{
        jj_consume_token(TipoDatoEntero);
        break;
        }
      case TipoDatoDecimal:{
        jj_consume_token(TipoDatoDecimal);
        break;
        }
      case TipoDatoCadena:{
        jj_consume_token(TipoDatoCadena);
        break;
        }
      case TipoDatoCaracter:{
        jj_consume_token(TipoDatoCaracter);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(Asignacion);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Variable:{
        jj_consume_token(Variable);
        break;
        }
      case Constante:{
        jj_consume_token(Constante);
        break;
        }
      case Numero:{
        jj_consume_token(Numero);
        break;
        }
      case Cadenas_Palabras:{
        jj_consume_token(Cadenas_Palabras);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaVectores() throws ParseException {
    try {
      jj_consume_token(Vector);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TipoDatoEntero:{
        jj_consume_token(TipoDatoEntero);
        break;
        }
      case TipoDatoDecimal:{
        jj_consume_token(TipoDatoDecimal);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CorcheteAbre);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Numero:{
        jj_consume_token(Numero);
        break;
        }
      case NumeroDecimal:{
        jj_consume_token(NumeroDecimal);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CorcheteCierra);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}

  static final public void gramaticaMatrices() throws ParseException {
    try {
      jj_consume_token(Matriz);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case TipoDatoEntero:{
        jj_consume_token(TipoDatoEntero);
        break;
        }
      case TipoDatoDecimal:{
        jj_consume_token(TipoDatoDecimal);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CorcheteAbre);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Numero:{
        jj_consume_token(Numero);
        break;
        }
      case NumeroDecimal:{
        jj_consume_token(NumeroDecimal);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CorcheteCierra);
      jj_consume_token(CorcheteAbre);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Numero:{
        jj_consume_token(Numero);
        break;
        }
      case NumeroDecimal:{
        jj_consume_token(NumeroDecimal);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(CorcheteCierra);
      jj_consume_token(DelimitadorLineaDeCodigo);
    } catch (ParseException e) {
Token t;
        do {
            t = getNextToken();
        } while (t.kind != DelimitadorLineaDeCodigo && t.kind != EOF);
        Tilin.tabla.add("Error en Sintaxis -> " + Tilin.traducirMensaje(e.getMessage()));
    }
}
